# dhad

./: .dockerignore  .gitattributes  .gitignore  .tauriignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE_MANIFEST.json  SECURITY.md  SHA256SUMS.txt  docker-compose.yml  gunicorn_conf.py  pyproject.toml  rust-toolchain.toml  vercel.json
.github/: dependabot.yml
benchmarks/: README.md  datasets.yml  phase4_sync_benchmark.py  profile_incremental.py  seed_v0.jsonl
desktop/: README.md  dhad.desktop
docs/: ANNOTATION_GUIDELINES_AR.md  BASELINE_AUDIT_AR.md  DATASET_GOVERNANCE_AR.md  DESKTOP_RELEASE.md  GOLD_MASTER_PRODUCT_SPEC.md  MASTER_DEVELOPMENT_PLAN_AR.md  MASTER_PLAN_V2_AR.md  MASTER_TRANSFORMATION_SPEC.md  OPTION_C_RUST_MORPHOLOGY_SYNTAX.md  PHASE_10_REPORT_AR.md  PHASE_11_REPORT_AR.md  PHASE_12_REPORT_AR.md  PHASE_1_REPORT_AR.md  PHASE_2_REPORT_AR.md  PHASE_3_REPORT_AR.md  PHASE_4_REPORT_AR.md  PHASE_5_REPORT_AR.md  PHASE_6_REPORT_AR.md  PHASE_7_REPORT_AR.md  PHASE_8_REPORT_AR.md  PHASE_9_REPORT_AR.md  PHASE_V2_BROWSER_SYNC_REPORT_AR.md  PHASE_V2_M2_M5_REPORT_AR.md  PHASE_V2_ONNX_BACKEND_REPORT_AR.md  PUBLISHING.md  STATE_OF_THE_ENGINE_AR.md  VMAX_PHASE_1_REPORT_AR.md  VMAX_PHASE_2_REPORT_AR.md  VMAX_PHASE_4_REPORT_AR.md  VMAX_PHASE_5_REPORT_AR.md  index.html
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  shared.js
mobile/: README.md
reports/: DESKTOP_GOLDMASTER_DEEP_AUDIT.json  DESKTOP_GOLDMASTER_DIRECTORY_INVENTORY.txt  DESKTOP_GOLDMASTER_FILE_SHA256SUMS.txt  DESKTOP_GOLDMASTER_INVENTORY.json  DESKTOP_GOLDMASTER_JS_CHECK.txt  DESKTOP_GOLDMASTER_NODE_TESTS.txt  DESKTOP_GOLDMASTER_RELEASE_REPORT.md  DESKTOP_GOLDMASTER_VALIDATION.json  DESKTOP_GOLDMASTER_VALIDATION.md  DESKTOP_ONNX_ASSET_MANIFEST.json  DESKTOP_PHASE1_VALIDATION.json  DESKTOP_PHASE1_VALIDATION.md  DESKTOP_PHASE2_FILES.sha256  DESKTOP_PHASE2_NODE_TESTS.txt  DESKTOP_PHASE2_VALIDATION.json  DESKTOP_PHASE2_VALIDATION.md  GOLD_MASTER_AUDIT.json  GOLD_MASTER_AUDIT.md  GOLD_MASTER_EVOLUTION_REPORT.md  GOLD_MASTER_FINAL_VALIDATION.md  GOLD_MASTER_INVENTORY.json  REPOSITORY_CLEANUP_AUDIT.md  SOVEREIGN_FINAL_VALIDATION.md  SOVEREIGN_NODE_TESTS_AVAILABLE.txt  SOVEREIGN_PHASE2_EVALUATION.txt  SOVEREIGN_TEST_MATRIX.json  SOVEREIGN_TEST_MATRIX.md  SOVEREIGN_VALIDATION.json  SOVEREIGN_VALIDATION.md  ULTIMATE_V15_FINAL_VALIDATION.json  ULTIMATE_V15_FINAL_VALIDATION.md  VMAX_APEX_AUDIT.json  VMAX_APEX_AUDIT.md  VMAX_APEX_EVOLUTION_REPORT.md  VMAX_APEX_FINAL_VALIDATION.md  VMAX_APEX_INVENTORY.json  VMAX_OMNI_AUDIT.json  VMAX_OMNI_AUDIT.md  VMAX_OMNI_EVOLUTION_REPORT.md  VMAX_OMNI_FINAL_VALIDATION.md  (+36 more)
rust/dhad-core-rs/: Cargo.toml
rust/dhad-core-rs/data/: morphology.json  morphology.json.zlib
rust/dhad-core-rs/src/: lib.rs  morphology.rs  packed.rs  rules.rs  spans.rs  syntax.rs  text.rs  types.rs  wasm_api.rs
rust/dhad-core-rs/tests/: golden.rs  morphology_syntax.rs  packed_abi.rs  rules_parity.rs
rust/dhad-core-rs/tests/data/: rules_golden.jsonl  text_golden.jsonl
scripts/: build-desktop.bat  build-desktop.sh  install-macos-app.sh  verify-macos-app.sh
src-tauri/: Cargo.toml  Info.plist  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  mini-assistant.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_commands.rs  lib.rs  main.rs  native_commands.rs  tray.rs
src-tauri/windows/: desktop-shortcut.wxs  nsis-hooks.nsh
tests/: test_analysis_context.py  test_api.py  test_api_cli.py  test_benchmark_seed.py  test_build_pipeline_hygiene.py  test_checks.py  test_crdt.py  test_desktop.py  test_diacritics.py  test_dialects.py  test_distillation.py  test_extension.py  test_gold_master.py  test_incremental.py  test_intelligence.py  test_lsp.py  test_macos_bundle_verifier.py  test_morphology.py  test_neural.py  test_onnx_backend.py  test_phase1_rules_v2.py  test_phase1_text.py  test_phase2_evaluation.py  test_privacy.py  test_release_config.py  test_rules.py  test_rust_parity.py  test_security.py  test_semantics.py  test_server.py  test_sovereign_release.py  test_spans.py  test_spellcheck.py  test_student_distillation.py  test_style.py  test_stylometry.py  test_sync.py  test_syntax.py  test_text.py  test_vmax_phase4_crdt.py  (+4 more)
tools/: audit_repository.py  build_phase2_corpus.py  build_wasm_core.sh  build_web_dist.mjs  check_javascript.mjs  (+18 more)
(+152 files in other folders)
