[build-system]
requires = ["hatchling", "editables>=0.3"]
build-backend = "hatchling.build"

[project]
name = "dhad"
dynamic = ["version"]
description = "ضاد — المساعد الكتابي العربي مفتوح المصدر | Open-source Arabic writing assistant (spelling, grammar, style)"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Dhad Project Contributors" }]
keywords = ["arabic", "nlp", "grammar", "spellcheck", "proofreading", "languagetool"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Natural Language :: Arabic",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "pydantic>=2.7",
  "pycrdt>=0.14.1,<0.15",
]

[project.optional-dependencies]
neural = ["transformers>=4.44", "torch>=2.2"]
onnx = ["onnxruntime>=1.17", "tokenizers>=0.19"]
server = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "python-multipart>=0.0.9",
  "websockets>=12",
  "redis>=7,<9",
]
production = ["gunicorn>=22.0", "uvicorn[standard]>=0.29", "uvicorn-worker>=0.4"]
desktop = ["pywebview>=5.1"]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "httpx2>=2.0",
  "ruff>=0.4",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "python-multipart>=0.0.9",
  "websockets>=12",
  "redis>=7,<9",
  "fakeredis>=2.36,<3",
  "onnxruntime>=1.17",
  "tokenizers>=0.19",
  "onnx>=1.15",
]

[project.scripts]
dhad = "dhad.cli:main"
dhad-lsp = "dhad.lsp.server:main"
dhad-desktop = "dhad.desktop:main"

[project.urls]
Homepage = "https://github.com/dhad-project/dhad"
Issues = "https://github.com/dhad-project/dhad/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dhad"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/SHA256SUMS.txt",
  "/dist",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.git",
  "/venv",
  "/web_demo/node_modules",
  "/web_demo/models/*.onnx",
  "/web_demo/vendor",
  "/web_demo/*.wasm",
  "/reports/release-archives",
  "**/__pycache__",
  "**/.DS_Store",
]

[tool.hatch.version]
path = "src/dhad/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = ["--import-mode=prepend"]
