[package]
name = "dhad-desktop"
version = "1.0.0"
description = "Native Tauri 2 desktop shell for the Dhad Arabic writing platform"
authors = ["Dhad Project"]
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "dhad_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dhad-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
dhad-core = { path = "../rust/dhad-core-rs" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "=2.7.2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-global-shortcut = "=2.3.2"
